<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/sharedCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        tools:text="14" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/increaseShared"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Increase Shared" />

        <Button
            android:id="@+id/decreaseShared"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Decrease Shared" />

    </LinearLayout>

    <TextView
        android:id="@+id/coloredCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp"
        tools:text="24" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/increaseFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Increase Fragment" />

        <Button
            android:id="@+id/decreaseFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Decrease Fragment" />

    </LinearLayout>

    <Button
        android:id="@+id/nextScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Next Screen" />

</LinearLayout>